# mcp-servers

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_fix.py  test_transport.py
.github/workflows/: docker-build.yml  python-publish.yml
capital-com-mcp-server/: .env-example  capital-mcp-server.py  capital_client.py  pyproject.toml
docker/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
src/capital_com_mcp_server/: LICENSE  README.md  __init__.py  capital_mcp_server.py  pyproject.toml
src/capital_com_mcp_server/capital_com_mcp_server/: __init__.py  capital_client.py  capital_mcp_server.py
src/etoro_mcp_server/: README.md  pyproject.toml
src/etoro_mcp_server/etoro_mcp_server/: __init__.py  etoro_client.py  etoro_mcp_server.py
src/etoro_mcp_server/tests/: conftest.py  test_feeds.py  test_market_data.py  test_portfolio.py  test_trading.py  test_users.py  test_watchlists.py
