[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capital-com-mcp-server"
version = "0.2.9"
description = "Capital.com MCP Server for Amazon Q and other LLMs"
readme = "README.md"
authors = [
    {name = "Syed Humair", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/syedair/mcp-servers"
"Bug Tracker" = "https://github.com/syedair/mcp-servers/issues"

[project.scripts]
capital-com-mcp-server = "capital_com_mcp_server.capital_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["capital_com_mcp_server"]
